# napsack-demo

./: README.md  pyproject.toml  run_demo.sh
demo/: __main__.py  ffmpeg_recorder.py  judge.py  napsack_fuse.py  pack_fuse.py  single_judge.py
demo/app/: processing.py  server.py  state.py
demo/app/static/: app.js  index.html  style.css
src/label/: __main__.py  processor.py  video.py
src/label/clients/: gemini.py
src/record/: __main__.py
